[package]
name = "bevy_tilemap"
version = "0.4.0"
authors = ["Joshua J. Bouw <dev@joshuajbouw.com>"]
edition = "2018"
description = "Tilemaps with chunks for the Bevy game engine, a simple-driven game engine and app framework"
repository = "https://github.com/joshuajbouw/bevy_tilemap"
license = "MIT"
keywords = ["game", "engine", "bevy", "tiles", "tilemap"]
categories = ["game-engines", "graphics", "gui"]
readme = "README.md"
documentation = "https://docs.rs/bevy_tilemap/latest/bevy_tilemap/"
exclude = ["assets/**/*", ".github/**/*", "doc/**/*"]

[package.metadata.docs.rs]
features = ["serialize", "types"]

[features]
default = ["types", "serialize"]

# crate
types = []

# serde
serialize = ["bevy_tilemap_types/serialize", "serde"]

[workspace]
members = ["library/*", "examples"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy/", branch = "main" }
bevy_tilemap_types = { path = "library/types", version = "0.4" }
bitflags = "1.2"
hexasphere = "3.2"
serde = { version = "1.0", features = ["derive"], optional = true }
